# libCoinGecko

./: CMakeLists.txt  README.md
include/: coingecko.hpp
src/: coingecko.cpp
test/: CMakeLists.txt  test.cpp
